# pip2sysdep

./: LICENSE  LICENSE.md  README.md  pyproject.toml
data/: debian-12.yaml  fedora-38.yaml  ubuntu-22.04.yaml  ubuntu-24.04.toml  ubuntu-24.04.yaml
data/fedora/38/: requests.txt
data/fedora/_common_/: pylint.txt
data/ubuntu/22.04/: pillow.txt
data/ubuntu/24.04/: fire.txt  pydantic.txt
data/ubuntu/_common_/: click.txt
src/: pip2sysdep.py
src/pip2sysdep/: __init__.py  __main__.py  _helper.py
tests/: pyproject-test.toml  requirements-test.txt  test_basic.py
